--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,327 @@
-aiohttp==3.8.6
+absl-py==1.4.0
+aiohttp==3.8.4
 aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==3.7.1
-async-timeout==4.0.3
-attrs==23.1.0
-bottle==0.12.25
-certifi==2023.7.22
-charset-normalizer==3.3.0
-dataclasses-json==0.6.1
-decorator==4.4.2
-exceptiongroup==1.1.3
-ffmpeg-python==0.2.0
-filelock==3.12.4
-frozenlist==1.4.0
-fsspec==2023.9.2
+albumentations==1.3.0
+altgraph==0.17.3
+anyio==3.6.2
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astroid==2.12.10
+async-generator==1.10
+async-timeout==4.0.2
+asynctest==0.13.0
+attrs==22.1.0
+av==10.0.0
+backcall==0.2.0
+beautifulsoup4==4.11.2
+bleach==6.0.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+cycler==0.11.0
+debugpy==1.6.3
+decorator==5.1.1
+decord==0.6.0
+defusedxml==0.7.1
+dill==0.3.5.1
+distlib==0.3.6
+distro==1.8.0
+docopt==0.6.2
+easydict==1.10
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.0.4
+fastjsonschema==2.16.3
+filelock==3.9.0
+Fiona==1.8.21
+fonttools==4.37.4
+frozenlist==1.3.3
+fsspec==2023.1.0
+ftfy==6.1.1
 future==0.18.3
-greenlet==3.0.0
-huggingface-hub==0.17.3
+fvcore==0.1.5.post20221221
+gcovr==5.2
+gdown==4.6.4
+geopandas==0.10.2
+gitdb==4.0.10
+GitPython==3.1.31
+h11==0.14.0
+huggingface-hub==0.15.1
 idna==3.4
-imageio==2.31.5
-imageio-ffmpeg==0.4.9
+imageio==2.22.1
+imgviz==1.5.1
+importlib-metadata==5.0.0
+importlib-resources==5.12.0
+iopath==0.1.10
+ipykernel==6.16.0
+ipython==7.34.0
+ipython-genutils==0.2.0
+iso8601==1.1.0
+isort==5.10.1
+jedi==0.18.1
 Jinja2==3.1.2
-jsonpatch==1.33
-jsonpointer==2.4
-langchain==0.0.319
-langsmith==0.0.49
-llvmlite==0.41.1
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-more-itertools==10.1.0
-moviepy==1.0.3
-mpmath==1.3.0
+joblib==1.2.0
+jsonpickle==1.5.2
+jsonschema==4.17.3
+jupyter-core==4.11.1
+jupyter-server==1.23.6
+jupyter_client==7.4.2
+jupyterlab-pygments==0.2.2
+kiwisolver==1.4.4
+labelImg==1.8.6
+labelme==5.0.5
+lazy-object-proxy==1.7.1
+lightning-utilities==0.8.0
+lxml==4.9.1
+macholib==1.16.2
+markdown-it-py==2.2.0
+MarkupSafe==2.1.1
+matplotlib==3.2.2
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mdurl==0.1.2
+mistune==2.0.5
 multidict==6.0.4
-mypy-extensions==1.0.0
-networkx==3.2
-numba==0.58.1
-numpy==1.26.1
-openai-whisper==20230918
-packaging==23.2
-pandas==2.1.1
-Pillow==10.1.0
-proglog==0.1.10
-proxy-tools==0.1.0
-pydantic==2.4.2
-pydantic_core==2.10.1
-pyobjc-core==10.0
-pyobjc-framework-Cocoa==10.0
-pyobjc-framework-Security==10.0
-pyobjc-framework-WebKit==10.0
+munch==2.5.0
+natsort==8.2.0
+nbclassic==0.5.3
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+nest-asyncio==1.5.6
+networkx==2.6.3
+nltk==3.8.1
+notebook==6.5.3
+notebook_shim==0.2.2
+numpy==1.21.6
+opencv-python==4.6.0.66
+opencv-python-headless==4.6.0.66
+openpyxl==3.1.2
+outcome==1.2.0
+packaging==21.3
+pandas==1.3.5
+pandocfilters==1.5.0
+parameterized==0.9.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+pkgutil_resolve_name==1.3.10
+platformdirs==2.5.2
+portalocker==2.7.0
+prometheus-client==0.16.0
+prompt-toolkit==3.0.31
+psutil==5.9.2
+ptyprocess==0.7.0
+py-cpuinfo==9.0.0
+pycparser==2.21
+Pygments==2.13.0
+pyinstaller==5.6.2
+pyinstaller-hooks-contrib==2022.13
+pylint==2.15.3
+pyobjc==9.0.1
+pyobjc-core==9.0.1
+pyobjc-framework-Accessibility==9.0.1
+pyobjc-framework-Accounts==9.0.1
+pyobjc-framework-AddressBook==9.0.1
+pyobjc-framework-AdServices==9.0.1
+pyobjc-framework-AdSupport==9.0.1
+pyobjc-framework-AppleScriptKit==9.0.1
+pyobjc-framework-AppleScriptObjC==9.0.1
+pyobjc-framework-ApplicationServices==9.0.1
+pyobjc-framework-AppTrackingTransparency==9.0.1
+pyobjc-framework-AudioVideoBridging==9.0.1
+pyobjc-framework-AuthenticationServices==9.0.1
+pyobjc-framework-AutomaticAssessmentConfiguration==9.0.1
+pyobjc-framework-Automator==9.0.1
+pyobjc-framework-AVFoundation==9.0.1
+pyobjc-framework-AVKit==9.0.1
+pyobjc-framework-BusinessChat==9.0.1
+pyobjc-framework-CalendarStore==9.0.1
+pyobjc-framework-CallKit==9.0.1
+pyobjc-framework-CFNetwork==9.0.1
+pyobjc-framework-ClassKit==9.0.1
+pyobjc-framework-CloudKit==9.0.1
+pyobjc-framework-Cocoa==9.0.1
+pyobjc-framework-Collaboration==9.0.1
+pyobjc-framework-ColorSync==9.0.1
+pyobjc-framework-Contacts==9.0.1
+pyobjc-framework-ContactsUI==9.0.1
+pyobjc-framework-CoreAudio==9.0.1
+pyobjc-framework-CoreAudioKit==9.0.1
+pyobjc-framework-CoreBluetooth==9.0.1
+pyobjc-framework-CoreData==9.0.1
+pyobjc-framework-CoreHaptics==9.0.1
+pyobjc-framework-CoreLocation==9.0.1
+pyobjc-framework-CoreMedia==9.0.1
+pyobjc-framework-CoreMediaIO==9.0.1
+pyobjc-framework-CoreMIDI==9.0.1
+pyobjc-framework-CoreML==9.0.1
+pyobjc-framework-CoreMotion==9.0.1
+pyobjc-framework-CoreServices==9.0.1
+pyobjc-framework-CoreSpotlight==9.0.1
+pyobjc-framework-CoreText==9.0.1
+pyobjc-framework-CoreWLAN==9.0.1
+pyobjc-framework-CryptoTokenKit==9.0.1
+pyobjc-framework-DeviceCheck==9.0.1
+pyobjc-framework-DictionaryServices==9.0.1
+pyobjc-framework-DiscRecording==9.0.1
+pyobjc-framework-DiscRecordingUI==9.0.1
+pyobjc-framework-DiskArbitration==9.0.1
+pyobjc-framework-DVDPlayback==9.0.1
+pyobjc-framework-EventKit==9.0.1
+pyobjc-framework-ExceptionHandling==9.0.1
+pyobjc-framework-ExecutionPolicy==9.0.1
+pyobjc-framework-ExternalAccessory==9.0.1
+pyobjc-framework-FileProvider==9.0.1
+pyobjc-framework-FileProviderUI==9.0.1
+pyobjc-framework-FinderSync==9.0.1
+pyobjc-framework-FSEvents==9.0.1
+pyobjc-framework-GameCenter==9.0.1
+pyobjc-framework-GameController==9.0.1
+pyobjc-framework-GameKit==9.0.1
+pyobjc-framework-GameplayKit==9.0.1
+pyobjc-framework-ImageCaptureCore==9.0.1
+pyobjc-framework-IMServicePlugIn==9.0.1
+pyobjc-framework-InputMethodKit==9.0.1
+pyobjc-framework-InstallerPlugins==9.0.1
+pyobjc-framework-InstantMessage==9.0.1
+pyobjc-framework-Intents==9.0.1
+pyobjc-framework-IOSurface==9.0.1
+pyobjc-framework-iTunesLibrary==9.0.1
+pyobjc-framework-KernelManagement==9.0.1
+pyobjc-framework-LatentSemanticMapping==9.0.1
+pyobjc-framework-LaunchServices==9.0.1
+pyobjc-framework-libdispatch==9.0.1
+pyobjc-framework-LinkPresentation==9.0.1
+pyobjc-framework-LocalAuthentication==9.0.1
+pyobjc-framework-MapKit==9.0.1
+pyobjc-framework-MediaAccessibility==9.0.1
+pyobjc-framework-MediaLibrary==9.0.1
+pyobjc-framework-MediaPlayer==9.0.1
+pyobjc-framework-MediaToolbox==9.0.1
+pyobjc-framework-Metal==9.0.1
+pyobjc-framework-MetalKit==9.0.1
+pyobjc-framework-MetalPerformanceShaders==9.0.1
+pyobjc-framework-MetalPerformanceShadersGraph==9.0.1
+pyobjc-framework-MLCompute==9.0.1
+pyobjc-framework-ModelIO==9.0.1
+pyobjc-framework-MultipeerConnectivity==9.0.1
+pyobjc-framework-NaturalLanguage==9.0.1
+pyobjc-framework-NetFS==9.0.1
+pyobjc-framework-Network==9.0.1
+pyobjc-framework-NetworkExtension==9.0.1
+pyobjc-framework-NotificationCenter==9.0.1
+pyobjc-framework-OpenDirectory==9.0.1
+pyobjc-framework-OSAKit==9.0.1
+pyobjc-framework-OSLog==9.0.1
+pyobjc-framework-PassKit==9.0.1
+pyobjc-framework-PencilKit==9.0.1
+pyobjc-framework-Photos==9.0.1
+pyobjc-framework-PhotosUI==9.0.1
+pyobjc-framework-PreferencePanes==9.0.1
+pyobjc-framework-PushKit==9.0.1
+pyobjc-framework-Quartz==9.0.1
+pyobjc-framework-QuickLookThumbnailing==9.0.1
+pyobjc-framework-ReplayKit==9.0.1
+pyobjc-framework-SafariServices==9.0.1
+pyobjc-framework-SceneKit==9.0.1
+pyobjc-framework-ScreenSaver==9.0.1
+pyobjc-framework-ScreenTime==9.0.1
+pyobjc-framework-ScriptingBridge==9.0.1
+pyobjc-framework-SearchKit==9.0.1
+pyobjc-framework-Security==9.0.1
+pyobjc-framework-SecurityFoundation==9.0.1
+pyobjc-framework-SecurityInterface==9.0.1
+pyobjc-framework-ServiceManagement==9.0.1
+pyobjc-framework-Social==9.0.1
+pyobjc-framework-SoundAnalysis==9.0.1
+pyobjc-framework-Speech==9.0.1
+pyobjc-framework-SpriteKit==9.0.1
+pyobjc-framework-StoreKit==9.0.1
+pyobjc-framework-SyncServices==9.0.1
+pyobjc-framework-SystemConfiguration==9.0.1
+pyobjc-framework-SystemExtensions==9.0.1
+pyobjc-framework-UniformTypeIdentifiers==9.0.1
+pyobjc-framework-UserNotifications==9.0.1
+pyobjc-framework-UserNotificationsUI==9.0.1
+pyobjc-framework-VideoSubscriberAccount==9.0.1
+pyobjc-framework-VideoToolbox==9.0.1
+pyobjc-framework-Virtualization==9.0.1
+pyobjc-framework-Vision==9.0.1
+pyobjc-framework-WebKit==9.0.1
+pyparsing==3.0.9
+pyproj==3.2.1
+PyQt5==5.15.7
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+pyrsistent==0.19.3
+pyserial==3.5
+PySocks==1.7.1
 python-dateutil==2.8.2
-pytz==2023.3.post1
-pywebview==4.3.3
-PyYAML==6.0.1
-regex==2023.10.3
+pytorch-lightning==1.9.5
+pytorchvideo==0.1.5
+pyttsx3==2.90
+pytz==2022.2.1
+PyWavelets==1.3.0
+PyYAML==6.0
+pyzmq==24.0.1
+QtPy==2.2.1
+qudida==0.0.4
+regex==2023.6.3
 requests==2.31.0
-safetensors==0.4.0
+rich==13.4.2
+RiverSegmentation @ file:///Users/jeremywang/Downloads/RiverSegmentation-6.0.1-py3-none-any.whl
+rouge-score==0.1.2
+sacred==0.8.2
+safetensors==0.3.1
+scikit-image==0.19.3
+scikit-learn==1.0.2
+scipy==1.7.3
+selenium==4.7.2
+Send2Trash==1.8.0
+Shapely==1.8.5
+shell_gpt==0.9.3
+simplejson==3.19.1
 six==1.16.0
+smmap==5.0.0
 sniffio==1.3.0
-SQLAlchemy==2.0.22
-stable-ts==2.13.0
-sympy==1.12
-tenacity==8.2.3
-tiktoken==0.3.3
-tokenizers==0.14.1
-torch==2.1.0
-torchaudio==2.1.0
-tqdm==4.66.1
-transformers==4.34.1
-typing-inspect==0.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
-urllib3==2.0.7
+sortedcontainers==2.4.0
+soupsieve==2.4
+tabulate==0.9.0
+termcolor==2.1.0
+terminado==0.17.1
+threadpoolctl==3.1.0
+tifffile==2021.11.2
+timm==0.9.2
+tinycss2==1.2.1
+tomli==2.0.1
+tomlkit==0.11.4
+torch==1.12.1
+torchmetrics==0.11.4
+torchsummary==1.5.1
+torchvision==0.13.1
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.4.0
+trio==0.22.0
+trio-websocket==0.9.2
+typed-ast==1.5.4
+typer==0.9.0
+typing_extensions==4.3.0
+urllib3==1.26.12
+virtualenv==20.19.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.5.1
+wrapt==1.14.1
+wsproto==1.2.0
+XlsxWriter==1.3.7
+yacs==0.1.8
 yarl==1.9.2
+zipp==3.9.0
